--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
     "mongoose": "^8.1.1",
     "morgan": "~1.9.1",
     "passport": "^0.7.0",
+    "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
+  },
+  "devDependencies": {
+    "chai": "^5.0.3",
+    "mocha": "^10.3.0",
+    "supertest": "^6.3.4"
   }
 }
